chandeliers-lus/tests/compile_fail/ui/tc/if-int.stderr
error: The condition of if should be of type bool
 --> tests/compile_fail/ui/tc/if-int.rs:5:16
  |
5 |         assert if 1 then true else false;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: The argument is found to be of type int
 --> tests/compile_fail/ui/tc/if-int.rs:5:19
  |
5 |         assert if 1 then true else false;
  |                   ^

error: Expected a scalar type, found a tuple (int, int, int)
  --> tests/compile_fail/ui/tc/if-int.rs:12:19
   |
12 |         assert if (1, 2, 3) then true else false;
   |                   ^^^^^^^^^

error: The argument of assert should be of type bool
  --> tests/compile_fail/ui/tc/if-int.rs:19:9
   |
19 |         assert 1;
   |         ^^^^^^^^
   |
note: The argument is found to be of type int
  --> tests/compile_fail/ui/tc/if-int.rs:19:16
   |
19 |         assert 1;
   |                ^

error: Expected a scalar type, found a tuple (int, int, int)
  --> tests/compile_fail/ui/tc/if-int.rs:26:16
   |
26 |         assert (1, 2, 3);
   |                ^^^^^^^^^
